<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/ivMainHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/iv_main_header"
        android:scaleType="centerCrop"
        android:src="@drawable/header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtMainTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_2x"
        android:layout_marginTop="@dimen/margin_2x"
        android:text="@string/txt_main_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivMainHeader" />

    <TextView
        android:id="@+id/txtMainSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:text="@string/txt_main_subtitle"
        app:layout_constraintStart_toStartOf="@+id/txtMainTitle"
        app:layout_constraintTop_toBottomOf="@+id/txtMainTitle" />

    <ImageView
        android:id="@+id/ivMainHeaderMark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/iv_main_header_mark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtMainTitle"
        app:srcCompat="@drawable/ic_bookmark" />

    <Button
        android:id="@+id/btnMainRent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_2x"
        android:layout_marginEnd="8dp"
        android:text="@string/btn_main_rent"
        app:layout_constraintEnd_toStartOf="@+id/btnMainBuy"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/txtMainSubtitle"
        app:layout_constraintTop_toBottomOf="@+id/txtMainSubtitle" />

    <Button
        android:id="@+id/btnMainBuy"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin"
        android:text="@string/btn_main_buy"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnMainRent"
        app:layout_constraintEnd_toEndOf="@+id/ivMainHeaderMark"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnMainRent" />

    <View
        android:id="@+id/hrPreButtons"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginTop="@dimen/margin_2x"
        android:background="@color/gray_divider"
        app:layout_constraintEnd_toEndOf="@+id/btnMainBuy"
        app:layout_constraintStart_toStartOf="@+id/btnMainRent"
        app:layout_constraintTop_toBottomOf="@+id/btnMainRent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginTop="@dimen/margin_2x"
        android:src="@drawable/ic_baseline_edit_24"
        app:layout_constraintEnd_toStartOf="@+id/floatingActionButton2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hrPreButtons"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/txtMainEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:text="@string/txt_main_edit"
        app:layout_constraintEnd_toEndOf="@+id/floatingActionButton"
        app:layout_constraintStart_toStartOf="@+id/floatingActionButton"
        app:layout_constraintTop_toBottomOf="@+id/floatingActionButton" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_family"
        app:layout_constraintEnd_toStartOf="@+id/floatingActionButton3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/floatingActionButton"
        app:layout_constraintTop_toTopOf="@+id/floatingActionButton"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/txtMainFamily"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_btn_family"
        app:layout_constraintBaseline_toBaselineOf="@+id/txtMainEdit"
        app:layout_constraintEnd_toEndOf="@+id/floatingActionButton2"
        app:layout_constraintStart_toStartOf="@+id/floatingActionButton2" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/tomato"
        app:layout_constraintEnd_toStartOf="@+id/floatingActionButton4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/floatingActionButton2"
        app:layout_constraintTop_toTopOf="@+id/floatingActionButton2"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/txtMainTomate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_main_tomate"
        app:layout_constraintBaseline_toBaselineOf="@+id/txtMainFamily"
        app:layout_constraintEnd_toEndOf="@+id/floatingActionButton3"
        app:layout_constraintStart_toStartOf="@+id/floatingActionButton3" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:src="@drawable/ic_similar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/floatingActionButton3"
        app:layout_constraintTop_toTopOf="@+id/floatingActionButton3"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/txtMainSlider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_main_slider"
        app:layout_constraintBaseline_toBaselineOf="@+id/txtMainTomate"
        app:layout_constraintEnd_toEndOf="@+id/floatingActionButton4"
        app:layout_constraintStart_toStartOf="@+id/floatingActionButton4" />


    <View
        android:id="@+id/hrPostButtons"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginTop="@dimen/margin_2x"
        android:background="@color/gray_divider"
        app:layout_constraintEnd_toEndOf="@+id/hrPreButtons"
        app:layout_constraintStart_toStartOf="@+id/hrPreButtons"
        app:layout_constraintTop_toBottomOf="@+id/txtMainTomate" />

    <TextView
        android:id="@+id/txtMainDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_2x"
        android:text="@string/txt_main_product_description"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="@+id/hrPostButtons"
        app:layout_constraintStart_toStartOf="@+id/hrPostButtons"
        app:layout_constraintTop_toTopOf="@+id/hrPostButtons" />
</androidx.constraintlayout.widget.ConstraintLayout>